OSJ-298: Replace use of finalize() in X509Certificate and X509CRL impls