@@ -17,11 +17,16 @@
 
 package org.opensaml.xmlsec.signature.impl;
 
+import java.lang.ref.Cleaner;
+import java.lang.ref.Cleaner.Cleanable;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
+import javax.annotation.Nonnull;
+
 import net.shibboleth.utilities.java.support.collection.IndexingObjectStore;
+import net.shibboleth.utilities.java.support.primitive.CleanerSupport;
 
 import org.opensaml.core.xml.AbstractXMLObject;
 import org.opensaml.core.xml.XMLObject;
@@ -32,6 +37,13 @@ public class X509CRLImpl extends AbstractXMLObject implements X509CRL {
 
     /** Class-level index of Base64 encoded CRL values. */
     private static final IndexingObjectStore<String> B64_CRL_STORE = new IndexingObjectStore<>();
+
+    /** The {@link Cleaner} instance to use. */
+    private static final Cleaner CLEANER = CleanerSupport.getInstance(X509CRLImpl.class);
+
+    /** The {@link Cleanable} representing the current instance's CRL value, as represented by the
+     * current <code>b64CRLIndex</code> field value. */
+    private Cleaner.Cleanable cleanable;
 
     /** Index to a stored Base64 encoded CRL. */
     private String b64CRLIndex;
@@ -55,13 +67,19 @@ public class X509CRLImpl extends AbstractXMLObject implements X509CRL {
     /** {@inheritDoc} */
     public void setValue(final String newValue) {
         // Dump our cached DOM if the new value really is new
-        final String currentCert = B64_CRL_STORE.get(b64CRLIndex);
-        final String b64Cert = prepareForAssignment(currentCert, newValue);
+        final String currentCRL = B64_CRL_STORE.get(b64CRLIndex);
+        final String newCRL = prepareForAssignment(currentCRL, newValue);
 
         // This is a new value, remove the old one, add the new one
-        if (!Objects.equals(currentCert, b64Cert)) {
-            B64_CRL_STORE.remove(b64CRLIndex);
-            b64CRLIndex = B64_CRL_STORE.put(b64Cert);
+        if (!Objects.equals(currentCRL, newCRL)) {
+            if (cleanable != null) {
+                cleanable.clean();
+                cleanable = null;
+            }
+            b64CRLIndex = B64_CRL_STORE.put(newCRL);
+            if (b64CRLIndex != null) {
+                cleanable = CLEANER.register(this, new CleanerState(b64CRLIndex));
+            }
         }
     }
 
@@ -71,10 +89,27 @@ public class X509CRLImpl extends AbstractXMLObject implements X509CRL {
         return Collections.emptyList();
     }
 
-    /** {@inheritDoc} */
-    @Override
-    protected void finalize() throws Throwable {
-        super.finalize();
-        B64_CRL_STORE.remove(b64CRLIndex);
+    /**
+     * The action to be taken when the current state must be cleaned.
+     */
+    static class CleanerState implements Runnable {
+
+        /** The index to remove from the store. */
+        private String index;
+
+        /**
+         * Constructor.
+         *
+         * @param idx the index in the {@link X509CertificateImpl#B64_CERT_STORE}.
+         */
+        public CleanerState(@Nonnull final String idx) {
+            index = idx;
+        }
+
+        /** {@inheritDoc} */
+        public void run() {
+            X509CRLImpl.B64_CRL_STORE.remove(index);
+        }
+
     }
 }
